--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "core-js": "^3.8.3",
     "sass": "^1.77.1",
     "vue": "^3.2.13",
