--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "sass": "^1.77.1",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0"
