--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "js-cookie": "^3.0.5",
     "sass": "^1.77.1",
     "vue": "^3.2.13",
-    "vue-i18n": "^9.1.0"
+    "vue-i18n": "^9.1.0",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
